# Opengl_Code

./: CMakeLists.txt  CMakePresets.json  README.md  StartUp.md  main.cpp
include/glad/: glad.h
lib/glad/: glad.c
src/: EBO.cpp  EBO.h  Op.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  window.cpp  window.h
